--- a/template.yaml
+++ b/template.yaml
@@ -15,7 +15,7 @@ Globals:
         Region: 'us-west-2' # Specify your region here
         DynamoDbEndpoint: 'http://docker.for.mac.host.internal:8000'
         UploadPictureBucket: 'images.placesiwanttovisit.com'
-        UploadPictureBucketRegion: 'us-west-2'
+        UploadPictureBucketRegion: 'us-west-2' # Specify your region here
 
 Resources:
   Index:
