--- a/template.yaml
+++ b/template.yaml
@@ -1,6 +1,4 @@
-# THIS CODE IS NOT PRODUCTION WORTH - FOR TUTORIAL PURPOSES ONLY #
-# THIS CODE IS NOT PRODUCTION WORTH - FOR TUTORIAL PURPOSES ONLY #
-# THIS CODE IS NOT PRODUCTION WORTH - FOR TUTORIAL PURPOSES ONLY #
+# THIS CODE IS FOR EDUCATIONAL PURPOSES ONLY #
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Globals:
@@ -8,14 +6,14 @@ Globals:
     Cors:
       AllowMethods: "'OPTIONS,POST,GET'"
       AllowHeaders: "'*'"
-      AllowOrigin: "'*'"
+      AllowOrigin: "'https://www.placesiwanttovisit.com'"
   Function:
     Environment:
       Variables:
-        Region: 'us-west-2' # Specify your region here
+        Region: 'YOUR_REGION' # Specify your region here
         DynamoDbEndpoint: 'http://docker.for.mac.host.internal:8000'
-        UploadPictureBucket: 'images.placesiwanttovisit.com'
-        UploadPictureBucketRegion: 'us-west-2' # Specify your region here
+        UploadPictureBucket: 'YOUR_S3_BUCKET_NAME'
+        UploadPictureBucketRegion: 'YOUR_S3_BUCKET_REGION' # Specify your region here
 
 Resources:
   Index:
